Worked on the layout for the navbar

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,11 +2,23 @@ html {
     height: 100%;
 }
 
-/* ---------------------- BACKGROUND COLORS ---------------------- */
-
-.bg-color-nav {
-    background-color: #969595!important;
+body {
+    padding: 0;
+    margin: 0;
 }
 
-/* ----------------------  ---------------------- */
+.uppercase {
+    text-transform: uppercase;
+}
+/* ---------------------- BACKGROUND COLORS ---------------------- */
 
+/* ---------------------- NAVBAR ---------------------- */
+
+/* ---------------------- CONTAINERS ---------------------- */
+
+/* ---------------------- ADDITIONAL STYING ---------------------- */
+
+/* ---------------------- HOVER ---------------------- */
+
+/* ---------------------- MEDIA QUERIES ---------------------- */
+/* ----------------------  ---------------------- */
