--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,4 +1,4 @@
-<ul>
+<ul class="mobile-top-header uppercase">
     <li class="list-inline-item">
       <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="text-center">
@@ -6,9 +6,9 @@
               <p class="my-0">Search</p>
           </div>
       </a>
-      <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
+      <div class="dropdown-menu border-0 rounded-0 my-0" aria-labelledby="mobile-search">
           <form class="form" method="GET" action="">
-              <div class="input-group w-100">
+              <div class="input-group">
                   <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
                   <div class="input-group-append">
                       <button class="form-control form-control btn btn-black border border-black rounded-0" type="submit">
@@ -25,7 +25,7 @@
       <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="text-center">
               <div><i class="fas fa-user fa-lg"></i></div>
-              <p class="my-0">My Account</p>
+              <p class="my-0">Account</p>
           </div>
       </a>
       <div class="dropdown-menu border-0" aria-labelledby="user-options">
@@ -33,7 +33,7 @@
               {% if request.user.is_superuser %}
                   <a href="{% url 'account_logout' %}" class="dropdown-item">Product Management</a>
               {% endif %}
-              <a href="" class="dropdown-item">My Profile</a>
+              <a href="" class="dropdown-item">Profile</a>
               <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
           {% else %}
               <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
