Added a footer section

--- a/templates/base.html
+++ b/templates/base.html
@@ -147,6 +147,10 @@
     {% block content %}
     {% endblock %}
 
+    <footer>
+        
+    </footer>
+
     {% block postloadjs %}
     {% endblock %}
 
