--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,13 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 html {
-    height: 100%;
+    /* height: 100%; */
 }
 
 body {
+    min-height: 100vh;
     padding: 0;
     margin: 0;
     font-family: 'Lato', sans-serif;
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 10rem;
+    background-color: white;
+    border-top: 1px solid black;
 }
 
 .uppercase {
