Added category divs

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,4 +2,50 @@
 {% load static %}
 
 {% block content %}
+
+<div class="row hero-container">
+
+</div>
+
+<div class="row shopnow-container">
+<div id="shopnow" class="col-12 col-sm-6 col-md-4 col-lg-2 mx-auto">
+    <h1>Decks</h1>
+</div>
+<div id="shopnow" class="col-12 col-sm-6 col-md-4 col-lg-2">
+    <h1>Wheels</h1>
+</div>
+<div id="shopnow" class="col-12 col-sm-6 col-md-4 col-lg-2">
+    <h1>Trucks</h1>
+</div>
+<div id="shopnow" class="col-12 col-sm-6 col-md-4 col-lg-2">
+    <h1>Bearings</h1>
+</div>
+<div id="shopnow" class="col-12 col-sm-6 col-md-4 col-lg-2">
+    <h1>Griptape</h1>
+</div>
+<div id="shopnow" class="col-12 col-sm-6 col-md-4 col-lg-2">
+    <h1>Misc</h1>
+</div>
+</div>
 {% endblock %}
+
+<!-- <ul class="list-inline list-unstyled text-lg-right my-0 uppercase">
+    <li class="list-inline-item">
+        <a href="" class="nav-link">Decks</a>
+    </li>
+    <li class="list-inline-item">
+        <a href="" class="nav-link">Wheels</a>
+    </li>
+    <li class="list-inline-item">
+        <a href="" class="nav-link">Trucks</a>
+    </li>   
+    <li class="list-inline-item">
+        <a href="" class="nav-link">Bearings</a>
+    </li>
+    <li class="list-inline-item">
+        <a href="" class="nav-link">Griptape</a>
+    </li>
+    <li class="list-inline-item">
+        <a href="" class="nav-link">Misc</a>
+    </li>
+</ul> -->
