worked on queries for shopnow button

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,44 +8,35 @@
 </div>
 
 <div class="row shopnow-container">
-<div id="shopnow" class="col-12 col-sm-6 col-md-4 col-lg-2 mx-auto">
-    <h1>Decks</h1>
-</div>
-<div id="shopnow" class="col-12 col-sm-6 col-md-4 col-lg-2">
-    <h1>Wheels</h1>
-</div>
-<div id="shopnow" class="col-12 col-sm-6 col-md-4 col-lg-2">
-    <h1>Trucks</h1>
-</div>
-<div id="shopnow" class="col-12 col-sm-6 col-md-4 col-lg-2">
-    <h1>Bearings</h1>
-</div>
-<div id="shopnow" class="col-12 col-sm-6 col-md-4 col-lg-2">
-    <h1>Griptape</h1>
-</div>
-<div id="shopnow" class="col-12 col-sm-6 col-md-4 col-lg-2">
-    <h1>Misc</h1>
-</div>
+<a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
+    <div id="shopnow-inner" class="hvr-round-corners">
+        <h1>Decks</h1>
+    </div>
+</a>
+<a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
+    <div id="shopnow-inner" class="hvr-round-corners">
+        <h1>Wheels</h1>
+    </div>
+</a>
+<a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
+    <div id="shopnow-inner" class="hvr-round-corners">
+        <h1>Trucks</h1>
+    </div>
+</a>
+<a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
+    <div id="shopnow-inner" class="hvr-round-corners">
+        <h1>Bearings</h1>
+    </div>
+</a>
+<a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
+    <div id="shopnow-inner" class="hvr-round-corners">
+        <h1>Griptape</h1>
+    </div>
+</a>
+<a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
+    <div id="shopnow-inner" class="hvr-round-corners">
+        <h1>Misc</h1>
+    </div>
+</a>
 </div>
 {% endblock %}
-
-<!-- <ul class="list-inline list-unstyled text-lg-right my-0 uppercase">
-    <li class="list-inline-item">
-        <a href="" class="nav-link">Decks</a>
-    </li>
-    <li class="list-inline-item">
-        <a href="" class="nav-link">Wheels</a>
-    </li>
-    <li class="list-inline-item">
-        <a href="" class="nav-link">Trucks</a>
-    </li>   
-    <li class="list-inline-item">
-        <a href="" class="nav-link">Bearings</a>
-    </li>
-    <li class="list-inline-item">
-        <a href="" class="nav-link">Griptape</a>
-    </li>
-    <li class="list-inline-item">
-        <a href="" class="nav-link">Misc</a>
-    </li>
-</ul> -->
