Added hover effects to links, added scroll behvaior, commented out some code

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,34 +7,34 @@
 
 </div>
 
-<div class="row shopnow-container">
+<div class="row shopnow-container uppercase">
 <a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
-    <div id="shopnow-inner" class="hvr-round-corners">
+    <div id="shopnow-inner" class="hvr-shrink">
         <h1>Decks</h1>
     </div>
 </a>
 <a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
-    <div id="shopnow-inner" class="hvr-round-corners">
+    <div id="shopnow-inner" class="hvr-shrink">
         <h1>Wheels</h1>
     </div>
 </a>
 <a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
-    <div id="shopnow-inner" class="hvr-round-corners">
+    <div id="shopnow-inner" class="hvr-shrink">
         <h1>Trucks</h1>
     </div>
 </a>
 <a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
-    <div id="shopnow-inner" class="hvr-round-corners">
+    <div id="shopnow-inner" class="hvr-shrink">
         <h1>Bearings</h1>
     </div>
 </a>
 <a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
-    <div id="shopnow-inner" class="hvr-round-corners">
+    <div id="shopnow-inner" class="hvr-shrink">
         <h1>Griptape</h1>
     </div>
 </a>
 <a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
-    <div id="shopnow-inner" class="hvr-round-corners">
+    <div id="shopnow-inner" class="hvr-shrink">
         <h1>Misc</h1>
     </div>
 </a>
