--- a/static/css/base.css
+++ b/static/css/base.css
@@ -8,6 +8,7 @@ body {
     font-family: 'Lato', sans-serif;
     overflow-x: hidden;
     color: #222831;
+    scroll-behavior: smooth ;
 }
 
 footer {
@@ -138,7 +139,7 @@ a.nav-link:hover {
 /* ---------------------- INDEX.HTML ---------------------- */
 
 .hero-container {
-    min-height: 60vh;
+    min-height: 70vh;
     border-bottom: 2px solid #222831;
 }
 
@@ -147,10 +148,10 @@ a#shopnow {
     color: black;
 }
 
-a#shopnow:hover {
+/* a#shopnow:hover {
     color: #fd7014!important;
     transition: 4ms ease-in-out;
-}
+} */
 
 #shopnow {
     text-align: center;
@@ -165,6 +166,7 @@ a#shopnow:hover {
 #shopnow-inner {
     background-color: white;
     border: 2px solid #222831;
+    border-radius: 15px;
     width: 100%;
     height: 100%;
     margin: 0 auto;
@@ -260,3 +262,4 @@ a#shopnow:hover {
 .shopnow-container {
     margin: 0 auto;
 }
+
