Added hero image, shop now button, changed the color arrangment

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,9 +3,21 @@
 
 {% block content %}
 
-<div class="row hero-container">
+    <div class="container h-100">
+        <div class="row h-100">
+            <div class="col-7 col-md-6 my-auto">
+                <h1 class="display-4 logo-font text-white">
+                    Update Your Equipment
+                </h1>
+                <div class="my-5">
+                    <h4>
+                        <a href="" class="shop-now-button btn btn-lg rounded-4 text-uppercase py-3">Shop Now</a>
+                    </h4>
+                </div>
+            </div>
+        </div>
+    </div>
 
-</div>
 
 <div class="row shopnow-container uppercase">
 <a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
