--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,8 +1,8 @@
 <div class="collapse navbar-collapse" id="main-nav">
-    <ul class="list-unstyled my-0 uppercase d-block d-lg-none">
+    <ul class="list-unstyled my-0  d-block d-lg-none">
         <li class="nav-item">
             <a href="{% url 'home' %}" class="nav-link main-logo-link navbar-brand">
-                <h2 class="logo-font text-black my-0">SkateShop.</h2>
+                <h2 class="logo-font text-black my-0 text-center main-nav-logo">SkateStore<span class="dot">.</span></h2>
             </a>
         </li>
         <li class="nav-item">
