--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -6,7 +6,7 @@
               <p class="my-0">Search</p>
           </div>
       </a>
-      <div class="dropdown-menu border-0 rounded-0 my-0" aria-labelledby="mobile-search">
+      <div class="dropdown-menu dropdown-search border-0 rounded-0 my-0" aria-labelledby="mobile-search">
           <form class="form" method="GET" action="">
               <div class="input-group">
                   <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
