--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
         <div id="topnav" class="row d-none d-lg-flex">
             <div class="col-12 col-md-2 col-lg-3 text-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link navbar-brand">
-                    <h2 class="logo-font text-black my-0">SkateShop.</h2>
+                    <h2 class="logo-font text-black my-0">SkateStore<span class="dot">.</span></h2>
                 </a>
             </div>
             <div class="col-12 col-md-6 col-lg-6 my-auto text-center">
@@ -137,6 +137,11 @@
             {% include 'includes/main-nav.html' %}
         </nav>
     </div>
+    <div id="delivery-banner" class="row text-center">
+        <div class="col">
+            <h4 class="logo-font my-1">Free delivery on orders over ${{ free_shipping_threshold }}!</h4>                
+        </div>            
+    </div>
     </header>
 
     {% if messages %}
@@ -150,7 +155,11 @@
     {% endblock %}
 
     <footer>
-        
+        <div class="row container-fluid pt-5">
+            <div class="col">
+                <h1 class="text-center">Footer Content</h1>
+            </div>
+        </div>
     </footer>
 
     {% block postloadjs %}
