--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,11 +3,11 @@
 
 {% block content %}
 
-    <div class="container h-100">
+    <div class="container h-100 hero-container">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
                 <h1 class="display-4 logo-font text-white">
-                    Update Your Equipment
+                    Update Your Skateboarding Equipment<span class="dot">.</span>
                 </h1>
                 <div class="my-5">
                     <h4>
@@ -21,32 +21,32 @@
 
 <div class="row shopnow-container uppercase">
 <a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
-    <div id="shopnow-inner" class="hvr-shrink">
+    <div id="shopnow-inner">
         <h1>Decks</h1>
     </div>
 </a>
 <a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
-    <div id="shopnow-inner" class="hvr-shrink">
+    <div id="shopnow-inner">
         <h1>Wheels</h1>
     </div>
 </a>
 <a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
-    <div id="shopnow-inner" class="hvr-shrink">
+    <div id="shopnow-inner">
         <h1>Trucks</h1>
     </div>
 </a>
 <a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
-    <div id="shopnow-inner" class="hvr-shrink">
+    <div id="shopnow-inner">
         <h1>Bearings</h1>
     </div>
 </a>
 <a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
-    <div id="shopnow-inner" class="hvr-shrink">
+    <div id="shopnow-inner">
         <h1>Griptape</h1>
     </div>
 </a>
 <a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
-    <div id="shopnow-inner" class="hvr-shrink">
+    <div id="shopnow-inner">
         <h1>Misc</h1>
     </div>
 </a>
