--- a/static/css/base.css
+++ b/static/css/base.css
@@ -360,3 +360,20 @@ a#shopnow {
     background: #492857;
     color: #EEEEEE;
 }
+
+
+/* Sign Out */
+
+.row.signout-container {
+    color: #EEEEEE;
+    min-height: 70vh;
+    margin-top: 10rem;
+    text-align: center;
+}
+
+.sign-out-button {
+    background: #764c87;
+    color: #EEEEEE;
+    min-width: 200px;
+    font-weight: 700;
+}
