--- a/templates/base.html
+++ b/templates/base.html
@@ -153,14 +153,14 @@
 
     {% block content %}
     {% endblock %}
-
+<!-- 
     <footer>
         <div class="row container-fluid pt-5">
             <div class="col">
                 <h1 class="text-center">Footer Content</h1>
             </div>
         </div>
-    </footer>
+    </footer> -->
 
     {% block postloadjs %}
     {% endblock %}
