Commented out product rating code, added the category to product cards

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -42,16 +42,17 @@
                                 {% endif %}
                                 <div class="card-body pb-0">
                                     <p class="mb-0">{{ product.name }}</p>
-                                </div>
+                                    <small class="text-muted">{{ product.category }}</small>
+                                    </div>
                                 <div class="card-footer pt-0 border-0 text-left">
                                     <div class="row">
                                         <div class="col">
                                             <p class="lead mb-0 text-left">${{ product.price }}</p>
-                                            {% if product.rating %}
+                                            <!-- {% if product.rating %}
                                                 <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
                                             {% else %}
                                                 <small class="text-muted">No Rating</small>
-                                            {% endif %}
+                                            {% endif %} -->
                                         </div>
                                     </div>
                                 </div>
