Added url for proudct detail

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -29,13 +29,13 @@
                         <div class="card img-card h-100">
                             {% if product.image %}
                             <div class="img-container">
-                                <a href="">
+                                <a href="{% url 'product_detail' product.id %}">
                                     <img class="text-center card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
                                 </a>
                             </div>  
                             {% else %}
                             <div class="img-container">
-                                <a href="">
+                                <a href="{% url 'product_detail' product.id %}">
                                     <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                                 </a>
                             </div>
