--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -14,9 +14,44 @@
 <div class="overlay"></div>
 <div class="container-fluid mt-5 pt-5">
     <div class="row">
-        
+        <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+            <div class="image-container my-5">
+                {% if product.image %}
+                    <a href="{{ product.image.url }}" target="_blank">
+                        <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                    </a>
+                    {% else %}
+                    <a href="">
+                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                    </a>
+                {% endif %}
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+            <div class="product-details-container mb-5 mt-md-5">
+                <h1 class="mb-0">{{ product.name }}</h1>
+                <p class="mb-0 text-left">${{ product.price }}</p>
+                <!-- {% if product.rating %}
+                    <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                {% else %}
+                    <small class="text-muted">No Rating</small>
+                {% endif %} -->
+                <small class="text-muted"> Product SKU: {{ product.sku }}</small>
+                <div class="accordion accordion-flush pt-2" id="accordionFlushExample">
+                    <div class="accordion-item">
+                        <h1 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            Details
+                            </button>
+                        </h1>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">{{ product.description }}</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-
    
 {% endblock %}
