Added search functionallity

--- a/templates/base.html
+++ b/templates/base.html
@@ -81,7 +81,7 @@
                             SEARCH
                         </a>
                         <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
-                            <form method="GET" action="">
+                            <form method="GET" action="{% url 'products' %}">
                                 <div class="input-group w-100">
                                     <input class="form-control border border-black rounded-0" type="text" name="q"
                                         placeholder="Search our site">
