--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -7,7 +7,7 @@
           </div>
       </a>
       <div class="dropdown-menu dropdown-search border-0 rounded-0 my-0" aria-labelledby="mobile-search">
-          <form class="form" method="GET" action="">
+          <form class="form" method="GET" action="{% url 'products' %}">
               <div class="input-group">
                   <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
                   <div class="input-group-append">
