Added category filtering

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,19 +53,19 @@
             <div class="col-12 col-md-6 col-lg-6 my-auto text-center">
                 <ul class="list-inline list-unstyled text-lg-right my-0 uppercase">
                     <li class="list-inline-item">
-                        <a href="" class="nav-link">Decks</a>
+                        <a href="{% url 'products' %}?category=decks" class="nav-link">Decks</a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="" class="nav-link">Wheels</a>
+                        <a href="{% url 'products' %}?category=wheels" class="nav-link">Wheels</a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="" class="nav-link">Trucks</a>
+                        <a href="{% url 'products' %}?category=trucks" class="nav-link">Trucks</a>
                     </li>   
                     <li class="list-inline-item">
-                        <a href="" class="nav-link">Bearings</a>
+                        <a href="{% url 'products' %}?category=bearings" class="nav-link">Bearings</a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="" class="nav-link">Griptape</a>
+                        <a href="{% url 'products' %}?category=griptape" class="nav-link">Griptape</a>
                     </li>
                     <li class="list-inline-item">
                         <a href="" class="nav-link">Misc</a>
