--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -6,19 +6,19 @@
             </a>
         </li>
         <li class="nav-item">
-            <a href="" class="nav-link">Decks</a>
+            <a href="{% url 'products' %}?category=decks" class="nav-link">Decks</a>
         </li>
         <li class="nav-item">
-            <a href="" class="nav-link">Wheels</a>
+            <a href="{% url 'products' %}?category=wheels" class="nav-link">Wheels</a>
         </li>
         <li class="nav-item">
-            <a href="" class="nav-link">Trucks</a>
+            <a href="{% url 'products' %}?category=trucks" class="nav-link">Trucks</a>
         </li>   
         <li class="nav-item">
-            <a href="" class="nav-link">Bearings</a>
+            <a href="{% url 'products' %}?category=bearings" class="nav-link">Bearings</a>
         </li>
         <li class="nav-item">
-            <a href="" class="nav-link">Griptape</a>
+            <a href="{% url 'products' %}?category=griptape" class="nav-link">Griptape</a>
         </li>
         <li class="nav-item">
             <a href="" class="nav-link">Misc</a>
