Added link to misc link, changed name for category in json file

--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
                         <a href="{% url 'products' %}?category=griptape" class="nav-link">Griptape</a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="" class="nav-link">Misc</a>
+                        <a href="{% url 'products' %}?category=misc" class="nav-link">Misc</a>
                     </li>
                 </ul>
             </div>
