--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -21,7 +21,7 @@
             <a href="{% url 'products' %}?category=griptape" class="nav-link">Griptape</a>
         </li>
         <li class="nav-item">
-            <a href="" class="nav-link">Misc</a>
+            <a href="{% url 'products' %}?category=misc" class="nav-link">Misc</a>
         </li>
     </ul>
 </div>
