--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -14,8 +14,16 @@
 <div class="overlay"></div>
 <div class="container-fluid mt-5 pt-5">
     <div class="row">
-        <div class="col text-center">
-            <h2>Products<span class="dot">.</span></h2>
+        <div class="product-header col text-center">
+            {% if current_categories %}
+                {% for c in current_categories %}
+                <a class="current-category" href="{% url 'products' %}?category={{ c.name }}">
+                    <span>{{ c.friendly_name }}<span class="dot">.</span></span>
+                </a>
+                {% endfor %}
+            {% else %}
+                <h1>Products<span class="dot">.</span></h1>
+            {% endif %}
         </div>
     </div>
     <div class="row">
@@ -42,12 +50,16 @@
                             {% endif %}
                             <div class="card-body pb-0">
                                 <p class="mb-0">{{ product.name }}</p>
-                                <small class="text-muted">{{ product.category }}</small>
                                 </div>
                             <div class="card-footer pt-0 border-0 text-left">
                                 <div class="row">
                                     <div class="col">
                                         <p class="lead mb-0 text-left">${{ product.price }}</p>
+                                        {% if product.category %}
+                                        <a href="{% url 'products' %}?category={{ product.category.name }}">
+                                            {{ product.category.friendly_name }}
+                                        </a>
+                                        {% endif %}
                                         <!-- {% if product.rating %}
                                             <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
                                         {% else %}
