--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -29,11 +29,30 @@
     <div class="row">
         <div class="product-container col-12">
             <div class="row mt-1 mb-2">
-
+                <div class="col-12 my-auto d-flex justify-content-center">
+                    <div class="sort-select-wrapper w-50">
+                        <select id="sort-selector" class="text-center custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                            <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
+                            <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
+                            <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
+                            <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
+                            <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>Rating (low to high)</option>
+                            <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>Rating (high to low)</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <p class="text-muted mt-3 text-center text-md-left">
+                        {% if search_term or current_categories or current_sorting != 'None_None' %}
+                            <span class="small"><a href="{% url 'products' %}">Products Home</a> | </span>
+                        {% endif %}
+                        {{ products|length }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
+                    </p>
+                </div>
             </div>
             <div class="row">
                 {% for product in products %}
-                    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                    <div class="col-6 col-sm-6 col-md-6 col-lg-4 col-xl-3">
                         <div class="card img-card h-100">
                             {% if product.image %}
                             <div class="img-container">
@@ -70,7 +89,7 @@
                             </div>
                         </div>
                     </div>
-                    {% if forloop.counter|divisibleby:1 %}
+                    {% if forloop.counter|divisibleby:2 %}
                         <div class="col-12 d-sm-none mb-4">
                          
                         </div>
