--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-    background-color: #EEEEEE;
+    background-color: #222;
     min-height: 100vh;
     padding: 0;
     margin: 0;
@@ -15,8 +15,8 @@ body {
     overflow-x: hidden;
     color: #222831;
     scroll-behavior: smooth ;
-    background: url('/media/rail.jpg') no-repeat center center fixed;
-    background-size: cover;
+    /* background: url('/media/rail.jpg') no-repeat center center fixed;
+    background-size: cover; */
     height: calc(100vh - 164px);
 }
 
@@ -430,14 +430,15 @@ a#shopnow {
 }
 
 .card-body p {
-    font-size: 2rem;
     font-weight: 700;
+    text-transform: uppercase;
 }
 
 .card-footer {
     background-color: #fff;
 }
 .card-footer p {
+    font-size: small;
     font-weight: 700;
 }
 
@@ -456,6 +457,10 @@ a#shopnow {
 .current-category:hover {
     color: #764c87!important;
     transition: 4ms ease-in-out;
+}
+
+.custom-select {
+    padding: .5rem;
 }
 /* ---------------------- PRODUCT_DETAIL.HTML ---------------------- */
 
