--- a/templates/base.html
+++ b/templates/base.html
@@ -156,7 +156,7 @@
     {% endblock %}
 
     <footer>
-        <div class="row container-fluid pt-5">
+        <div class="row container-fluid mt-4">
             <div class="col">
                 <h1 class="text-center">Footer Content</h1>
             </div>
