--- a/templates/base.html
+++ b/templates/base.html
@@ -117,7 +117,7 @@
                     </li>
                     <li class="list-inline-item">
                         <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
-                            href="">
+                            href="{% url 'view_bag' %}">
                             {% if grand_total %}
                             BAG ${{ grand_total|floatformat:2 }}
                             {% else %}
