--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container mb-2">
+<div class="container mt-5 pt-5">
     <div class="row">
         <div class="col">
             <hr>
