--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -15,6 +15,7 @@
 <div class="container-fluid mt-5 pt-5">
     <div class="row">
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+            <!-- Product Image -->
             <div class="image-container my-5">
                 {% if product.image %}
                     <a href="{{ product.image.url }}" target="_blank">
@@ -29,6 +30,7 @@
         </div>
         <div class="col-12 col-md-6 col-lg-4">
             <div class="product-details-container mb-5 mt-md-5">
+                <!-- Producat name/price -->
                 <h1 class="mb-0">{{ product.name }}</h1>
                 <p class="mb-0 text-left">${{ product.price }}</p>
                 <!-- {% if product.rating %}
@@ -36,6 +38,7 @@
                 {% else %}
                     <small class="text-muted">No Rating</small>
                 {% endif %} -->
+                <!-- Accordian for product information -->
                 <div class="accordion accordion-flush pt-2" id="accordionFlushExample">
                     <div class="accordion-item">
                         <h1 class="accordion-header" id="flush-headingOne">
@@ -56,6 +59,32 @@
                         </div>
                     </div>
                 </div>
+                <!-- Quantity selctor  -->
+                <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                    {% csrf_token %}
+                    <div class="form-row">
+                        <div class="col-12">
+                            <p class="mt-3"><strong>Quantity:</strong></p>
+                            <div class="form-group w-50">
+                                <div class="input-group">
+                                    <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                </div>
+                            </div>%
+                        </div>
+                        <div class="col-12">
+                            <!-- Keep shoping button -->
+                            <a href="{% url 'products' %}" class="btn rounded-0 mt-5">
+                                <span class="icon">
+                                    <i class="fas fa-chevron-left"></i>
+                                </span>
+                                <span class="text-uppercase">Keep Shopping</span>
+                            </a>
+                            <!-- Add to bag button -->
+                            <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                        </div>
+                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                    </div>
+                </form>
             </div>
         </div>
     </div>
