--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,9 +3,36 @@
 
 {% block content %}
 
-    <div class="container h-100 hero-container">
-        <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
+<!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="/media/rail.jpg" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/media/board.jpg" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="..." alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div> -->
+
+    <div class="container hero-container">
+        <div class="row">
+            <div class="col-12 my-auto mx-auto">
                 <h1 class="display-4 logo-font text-white">
                     Update Your Skateboarding Equipment<span class="dot">.</span>
                 </h1>
@@ -19,36 +46,45 @@
     </div>
 
 
-<div class="row shopnow-container uppercase">
-<a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
+<div class="row container-fluid shopnow-container bg-shopnow pt-3 pb-3">
+
+<a href="{% url 'products' %}?category=decks" id="shopnow" class="col-12 col-sm-6 col-md-4 col-lg-2">
     <div id="shopnow-inner">
         <h1>Decks</h1>
     </div>
 </a>
-<a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
-    <div id="shopnow-inner">
-        <h1>Wheels</h1>
-    </div>
-</a>
-<a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
+<a href="{% url 'products' %}?category=trucks" id="shopnow" class="col-12 col-sm-6 col-md-4 col-lg-2">
     <div id="shopnow-inner">
         <h1>Trucks</h1>
     </div>
 </a>
-<a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
+<a href="{% url 'products' %}?category=wheels" id="shopnow" class="col-12 col-sm-6 col-md-4 col-lg-2">
+    <div id="shopnow-inner">
+        <h1>Wheels</h1>
+    </div>
+</a>
+<a href="{% url 'products' %}?category=bearings" id="shopnow" class="col-12 col-sm-6 col-md-4 col-lg-2">
     <div id="shopnow-inner">
         <h1>Bearings</h1>
     </div>
 </a>
-<a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
+<a href="{% url 'products' %}?category=griptape" id="shopnow" class="col-12 col-sm-6 col-md-4 col-lg-2">
     <div id="shopnow-inner">
         <h1>Griptape</h1>
     </div>
 </a>
-<a href="" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
+<a href="{% url 'products' %}?category=misc" id="shopnow" class="col-12 col-sm-6 col-md-4 col-lg-2">
     <div id="shopnow-inner">
         <h1>Misc</h1>
     </div>
 </a>
+</div>
+
+
+
+<div class="container-fluid tutorial-container row">
+    <p class="">
+        Need help to assemble a board? Follow the steps below!
+    </p>
 </div>
 {% endblock %}
